--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@config-plugins/react-native-webrtc": "^12.0.0",
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
-    "@daily-co/daily-js": "^0.81.0",
     "@daily-co/react-native-daily-js": "^0.78.0",
     "@daily-co/react-native-webrtc": "111.0.0-daily.2",
     "@expo/vector-icons": "^14.1.0",
-    "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
-    "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -52,6 +48,7 @@
     "react-native-background-timer": "^2.3.1",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-localize": "^3.5.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -59,7 +56,6 @@
     "react-native-svg": "15.11.2",
     "react-native-video": "^6.16.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
     "react-native-worklets-core": "^1.6.0",
     "tailwindcss": "3.4.17"
   },
